# concurrency

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
notes/: custom.css  index.html
src/: CMakeLists.txt  task_queue.h  task_system_one_queue.h  task_system_queue_per_thread.h  task_system_queue_per_thread_with_stealing.h
tests/: CMakeLists.txt  channel_1_simple.cpp  channel_2_stateful.cpp  channel_3_join.cpp  future_1_simple.cpp  future_2_then.cpp  future_3_join.cpp  future_4_split.cpp  task_system.cpp
tests/cmake/: benchmark.cmake  catch2.cmake  picosha2.cmake  stlab.cmake
tests/cmake/secp256k1/: CMakeLists.txt
tools/: amdahl_linear_plot.py  task_system_speed_plot.py
